<resources>
    <string name="app_name">Notes App MVVM Retrofit Hilt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_account">Create New Account</string>
    <string name="please_provide_all_the_required_information">Please provide all the required information</string>
    <string name="username">Username</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="sign_up">sign up</string>
    <string name="already_have_an_account_sign_in">Already have an account? <font color="#2196F3">Sign In </font></string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_access_your_notes">Login to access your notes</string>
    <string name="sign_in">log in</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? <font color="#2196F3">Register Now</font></string>
    <string name="developer_name">Mohammed Rehan</string>
</resources>
